<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    tools:context=".ItemPatientRecycler">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="15dp">

        <LinearLayout
            android:id="@+id/username_container_item_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/nama_keluarga"
                android:fontFamily="@font/roboto_bold"/>

            <TextView
                android:id="@+id/item_user_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_2"
                android:text="@string/item_user_name_value"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/patient_name_container_item_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/username_container_item_rv">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/nama_pasien_empty"
                android:fontFamily="@font/roboto_bold"/>

            <TextView
                android:id="@+id/item_patient_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_2"
                android:text="@string/item_patient_name_value"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/patient_name_container_item_rv">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/alamat_pasien_empty"
                android:fontFamily="@font/roboto_bold"/>

            <TextView
                android:id="@+id/item_address_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_2"
                android:text="@string/item_alamat_pasien_value"/>

        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>