<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseCategoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/connect_page_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_custom_action_bar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/bg_custom_action_bar">

            <ImageButton
                android:contentDescription="@string/back_arrow"
                android:id="@+id/back_arrow_connect_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back_arrow" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/choose_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/pilih_kategori"
            android:textColor="@color/text_disable_color"
            android:fontFamily="@font/roboto_black"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_category"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/keluarga_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:background="@drawable/bg_button_category_disabled"
                android:text="@string/keluarga"
                android:textAllCaps="false"
                android:textColor="@color/text_disable_color"
                android:textSize="12sp" />

            <Button
                android:id="@+id/tenaga_kesehatan_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/bg_button_category_disabled"
                android:text="@string/tenaga_kesehatan"
                android:textColor="@color/text_disable_color"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:layout_toEndOf="@id/keluarga_btn"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>